sửa api ProductRelated sử dụng ProductViewDTO cho sản phẩm của user,Sửa Wishlist item